[package]
name = "cloudflare-worker-rs-turso"
version = "0.1.0"
edition = "2021"
authors = [ "{{Petar Vasilev}}" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0.188"
serde_json = "1.0"
worker = { version="0.2.0", features=['http'] }
worker-macros = { version="0.2.0", features=['http'] }
libsql-client = { version = "0.34", default-features = false, features = ["workers_backend"] }
console_error_panic_hook = { version = "0.1.1" }
http = "1.1"

[patch.crates-io]
libsql-client = { git = "https://github.com/fullstack-dev0727/libsql-client-rs" }